--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2">
   <id>com.thanosp.phpstorm.inheritdoc</id>
   <name>PHP inheritDoc helper</name>
-  <version>1.3</version>
+  <version>1.3.1</version>
   <vendor email="zinbiel@gmail.com" url="https://github.com/thanosp/phpstorm-inheritdoc">Thanosp</vendor>
 
   <description><![CDATA[
@@ -10,6 +10,10 @@
     ]]></description>
 
   <change-notes><![CDATA[
+      <strong>1.3.1</strong>: <br/>
+      <ul>
+      <li>Made folding look deeper into inherited classes for the parent documentation</li>
+      </ul>
       <strong>1.3</strong>: <br/>
       <ul>
       <li>Added inline folding. Inheritdoc may now be actually used to extend documentation</li>
